--- a/Topic K.ipynb
+++ b/Topic K.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnA68eC6/cgqYVWG8346rS"
+      "authorship_tag": "ABX9TyOiDitW2coc44tle7i6NfEO"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,11 +18,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Combined presentations and Proof of Association\n",
+        "# Topic K - Combined presentations and Proof of Association\n",
         "\n",
-        "Disclamer: This text is not intended to communicate a favored approach; but to guide a fruitful discussion. Furthermore, the text does not consider protocol choices already made, but may reference these when suitable.\n",
+        "Disclamer: This text is not intended to communicate a favored approach, but to guide a fruitful discussion. Favoritism on the author's behalf is clearly communicated. Furthermore, the text does not consider protocol choices already made for the EUDIW context, but may reference these when suitable.\n",
         "\n",
-        "## Defining combined presentations\n",
+        "## Defining secure combined presentations\n",
         "\n",
         "[Topic K](https://github.com/eu-digital-identity-wallet/eudi-doc-architecture-and-reference-framework/issues/341) defines *combined presentations* and aims to outline implementation requirements.\n",
         "\n",
@@ -64,7 +64,6 @@
         "  \"role\": \"CEO\"\n",
         "}\n",
         "```\n",
-        "## Security requirements for combined presentations\n",
         "\n",
         "With the above in mind, the following security requirements must be met:\n",
         "\n",
@@ -79,9 +78,9 @@
         "\n",
         "### Session-based PoA\n",
         "\n",
-        "Session-based PoA ensures that all attestations sent within a secured session originate from the same certified WSCD and refer to the same identity subject. This approach is useful when a Verifier can validate multiple attestations within a session.\n",
+        "Session-based PoA ensures that all attestations sent over a secured session originate from the same certified WSCD and refer to the same identity subject.\n",
         "\n",
-        "Session-based PoA requires that:\n",
+        "Session-based PoA requirements include:\n",
         "\n",
         "1. The WSCD must protect the User's attestations, not just the cryptographic keys.\n",
         "2. The WSCD must only protect attestations that describe the same identity subject.\n",
@@ -159,47 +158,55 @@
         "Two primary approaches exist. Both leverage homomorphic relationships between private and public key operations:\n",
         "\n",
         "1. **Key ratio associations**. [Verheul (2025)](https://eprint.iacr.org/2024/1444.pdf) presents a well-developed approach.\n",
-        "  * An **association key** is defined as the ratio of private key scalars: $z = p_2 \\cdot p_1^{-1}$.\n",
+        "  * An **association key**. Given private keys $(p_1, p_2)$, an association key is defined as the ratio of private key scalars: $z = p_2 \\cdot p_1^{-1}$.\n",
         "  * The multiplicative structure of $z$ is preserved in the public key domain enabling PoA.\n",
-        "  * Based on a modified Schnorr signature.\n",
+        "  * Based on a modified Schnorr signature / Chaum-Pedersen proof.\n",
         "  * Requires both PoA and PoP from the User.\n",
         "  * Depends on certified WSCD capable of arbitrary private key computations.\n",
         "2. **Derived associations with key blinding**. Detailed in BIP-32 and SLIP-0010 (both widely adopted), adapted for an EUDIW context in [ARKG](https://datatracker.ietf.org/doc/draft-bradleylundberg-cfrg-arkg/), and [HDK](https://datatracker.ietf.org/doc/draft-dijkhuis-cfrg-hdkeys/); further detailed in [KBSS](https://datatracker.ietf.org/doc/draft-irtf-cfrg-signature-key-blinding/).\n",
         "  * Applies a blinding factor, $p_b$, to an existing private key $p_1$.\n",
         "  * The blinding factor can be applied additively, $p_1 + p_b$, or multiplicative $p_1 \\cdot p_b$, depending on the scheme and leverages existing key generation subroutines.\n",
         "  * When locally computed the User derives $p_b$ for use with new keys. An Issuer would here require PoP and PoA.\n",
-        "  * In joint computation, a KEM ensures that both the User and Issuer can compute the public key association, while only the User derives the private key association.\n",
+        "  * In joint computation, a shared secret ensures that both the User and Issuer can compute the public key association, while only the User derives the private key association.\n",
         "  * Implicitly ensures PoP and PoA requiring proof of neither.\n",
         "  * Explicit PoA possible via Chaum-Pedersen proofs.\n",
         "\n",
         "> NOTE 1: Key generation and PoA are intertwined in key ratio assocations, but separate (and potentially software based) in derived assocation using key blinding.\n",
-        "> NOTE 2: Due to the relationships introduced, both approaches require safeguards with malleable schemes like ECDSA to prevent signature forgeries.\n",
+        "\n",
+        "> NOTE 2: Due to the private key relationships introduced, both approaches require safeguards with malleable schemes like ECDSA to prevent signature forgeries.\n",
         "\n",
         "Both approaches require extensive scrutiny before their benefits and drawbacks can be fully assessed. This discussion aims to contribute to their respective evaluations.\n",
         "\n",
-        "As I actively support and contribute to the derived associations via key blinding approach, I would like to initiate this discussion with the following remarks:\n",
+        "I actively support and contribute to the derived associations via key blinding approach, and would like to initiate this discussion with the following remarks:\n",
         "* Related discussion: See [Topic B](https://github.com/eu-digital-identity-wallet/eudi-doc-architecture-and-reference-framework/discussions/354#discussioncomment-11941084)\n",
         "* **Critical** review of Verheul (2015): Available in this [publicly accessible document](https://drive.google.com/file/d/1zBzYR4ZM5gxt_IdNDOMuaxlztakyjAcv/view?usp=sharing), where all comments are public.\n",
         "\n",
         "I greatly appreciate Verheul's work and the effort invested; my critique is intended to be constructive and support further improvement. To this end, I offer the following comments:\n",
         "\n",
-        "* The security requirements are heuristically derived from a specific use case context that may not align with EUDIW's needs.\n",
+        "* The security requirements are heuristically derived from a specific deployment model, which may bias conclusions and be unsuitable for the EUDIW in general. Alternatives like threat scenarios or using established security standards/specifications are preferable. If a use-case driven approach is necessary, it should model valid/malicious interactions and clearly define system goals and what participants MUST (NOT) be able to do.\n",
         "* Particularly, I challenge SW2 in Verheul's work, but also raise issues with SW1.\n",
         "* Seemingly, due to the single-generator constraint and potentially overly restrictive security assumptions, Verheul's approach introduces three key requirements:\n",
         "  * (a) an association key,\n",
         "  * (b) a WSCD capable of arbitrary private key operations, and\n",
         "  * (c) a heavily modified Schnorr algorithm.\n",
         "* I am concerned about the relationship introduced in (a) and that (c) deviates significantly from a standard Schnorr or Chaum-Pedersen proof.\n",
-        "* If (b) is required, it raises the question of why (a) and (c) are needed at all, given that simpler methods (c.f. Appendix B) may exist.\n",
+        "* If (b) is required, it raises the question of why (a) and (c) are needed at all, given that much simpler methods (c.f. Appendix B) exist assuming (b).\n",
         "* Verheul's approach blurs the distinction between Proof of Possession (PoP) and Proof of Association (PoA), which may not be ideal for modular security designs.\n",
-        "* The HDK approach I am involved in has received criticism as discussed in Topic B.\n",
+        "\n",
+        "> NOTE: The HDK approach I am involved in has received criticism as discussed in Topic B.\n",
         "\n",
         "## Achieving Valid Composition\n",
         "\n",
         "I have no idea how to do this generally. The only viable ways I can think of are:\n",
         "\n",
         "1. limit attribute compositions to a single identity subject, and\n",
-        "2. a claims based approach where attributes evidence valid compositions (e.g., values in the first attestation for `parents` that can be matched with the corresponding subject identifer values in the second attestation)."
+        "2. a claims based approach where attributes evidence valid compositions (e.g., values in the first attestation for `parents` that can be matched with the corresponding subject identifer values in the second attestation).\n",
+        "\n",
+        "If a solution exist, I would be very interested in seeing it. If no solution exists, I propose we discuss what limitations need to be in place for Combined Presentations to circumvent concerns with Valid Composition.\n",
+        "\n",
+        "## Author contributions\n",
+        "\n",
+        "The text was written by Peter Altmann, with conceptual input on session-based PoA from Stefan Santesson, and review by Sander Dijkhuis."
       ],
       "metadata": {
         "id": "QS9g4Cql-7-d"
@@ -242,7 +249,7 @@
       "source": [
         "An EC setup requires a curve and two generators, $(G, H)$. $G$, is the curve's standard generator, while security requires $H$ to be chosen using a publicly verifiable random process. We need to ensure each Issuer generates a distinct generator and eliminate as many attack vectors as possible.\n",
         "\n",
-        "One potential solution is a KEM-seeded Hash-to-Curve ([RFC 9180](https://www.rfc-editor.org/rfc/rfc9180.html) with [RFC 9380](https://www.rfc-editor.org/rfc/rfc9380.html)). The KEM part ensures Issuer distinct generators, while Hash-to-Curve outputs a generator with unknown scalar.\n",
+        "One illustrative solution is a KEM-seeded Hash-to-Curve ([RFC 9180](https://www.rfc-editor.org/rfc/rfc9180.html) with [RFC 9380](https://www.rfc-editor.org/rfc/rfc9380.html)). The KEM part ensures Issuer distinct generators, while Hash-to-Curve outputs a generator with unknown scalar.\n",
         "\n",
         "Here, we just pick $H$ at random."
       ],
