--- a/Topic_K_Appendices.ipynb
+++ b/Topic_K_Appendices.ipynb
@@ -208,7 +208,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Apprendix B: Simple PoA when WSCD supports arbitrary operations"
+        "## Appendix B: Simple PoA when WSCD supports arbitrary operations"
       ],
       "metadata": {
         "id": "Bz1FXkQAhAx9"
